--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "fredness",
-  "license": "ISC"
+  "license": "Creative Commons 3.0",
+  "devDependencies": {
+    "csv-parser": "^3.0.0",
+    "json-server": "^0.16.3"
+  }
 }
